--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,6 @@ header {
     text-align: center;
 }
 
-
 nav a {
     color: white;
     margin: 0 15px;
@@ -35,13 +34,24 @@ section {
 }
 
 ul {
-    list-style-type: none;
+    list-style-type: none; /* Suppression des puces par défaut */
     padding: 0;
     text-align: center;
 }
 
 ul li {
     margin: 5px 0;
+    padding-left: 1.5em;
+    position: relative;
+}
+
+ul li::before {
+    content: '•'; /* Utilisation de puces */
+    position: absolute;
+    left: 0;
+    color: #2E86C1; /* Même couleur que le header pour cohérence */
+    font-size: 1.5em;
+    line-height: 1em; /* Aligner verticalement avec le texte */
 }
 
 footer {
